[package]
name = "burncloud-client-models"
version = "0.1.3"
edition = "2021"
description = "Model management page for BurnCloud client applications"
license = "MIT"
repository = "https://github.com/burncloud/burncloud"
authors = ["burncloud contributors"]

[[bin]]
name = "model_demo"
path = "src/main.rs"

[[bin]]
name = "integration_test"
path = "src/integration_test.rs"
test = false

[lib]
name = "burncloud_client_models"
path = "src/lib.rs"

[dependencies]
dioxus = { version = "0.6.3", features = ["desktop"] }
dioxus-desktop = "0.6.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
sha2 = "0.10"
md5 = "0.7"
futures-util = "0.3"
burncloud-service-models = { path = "../burncloud-service-models" }
burncloud-database = { path = "../burncloud-database" }
burncloud-database-models = { path = "../burncloud-database-models" }

[dev-dependencies]
tempfile = "3.8"